tests/ui/trait-bounds/shadowed-path-in-trait-bound-suggestion.stderr
error[E0405]: cannot find trait `Trait` in `A`
  --> $DIR/shadowed-path-in-trait-bound-suggestion.rs:10:24
   |
LL |     pub struct A<H: A::Trait>(pub H);
   |                        ^^^^^ not found in `A`
   |
help: consider importing this trait
   |
LL +     use A::Trait;
   |
help: if you import `Trait`, refer to it directly
   |
LL -     pub struct A<H: A::Trait>(pub H);
LL +     pub struct A<H: Trait>(pub H);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0405`.
